--- a/views/login.ejs
+++ b/views/login.ejs
@@ -80,7 +80,7 @@
 				<% if (msg) { %>
 				<p><%= msg %></p>
 				<% } %>
-				<p>No accout? <a href="/auth/register">Register</a></p>
+				<p>No account? <a href="/auth/register">Register</a></p>
 			</form>
 		</div>
 	</body>
